--- a/group-activities/week-9/pa-6-united-nations-voting.qmd
+++ b/group-activities/week-9/pa-6-united-nations-voting.qmd
@@ -1,5 +1,5 @@
 ---
-title: "United Nations Voting Records"
+title: "PA 6: United Nations Voting Records"
 author: "Instructions"
 format: html
 embed-resources: true
