--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 9       | Friday, 3/21 | [Pivoting and Joining Data](weeks/week-8-9-reshaping-joining.qmd) | [Pair Activity 6: UN Voting Records](group-activities/week-9/pa-6-united-nations-voting.qmd)                                      |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 10      | Friday, 3/28 | [Factors](weeks/week-10-factors.qmd)                              |                                                                                                                                   |
+| 10      | Friday, 3/28 | [Factors](weeks/week-10-factors.qmd)                              | [Pair Activity 7: COVID-19 Comparisons](group-activities/week-10/pa-7-covid.qmd)                                                  |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 11      | Friday, 4/10 | [Strings, Dates, and Times](weeks/week-11-strings-dates.qmd)      |                                                                                                                                   |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
