--- a/labs/student/lab-6-student.qmd
+++ b/labs/student/lab-6-student.qmd
@@ -1,7 +1,9 @@
 ---
 title: "Lab 6: Childcare Costs in California"
 author: "Your name here!"
-format: gfm
+format: 
+  html: default
+  gfm: default
 editor: source
 embed-resources: true
 ---
