update week 11 activity

--- a/index.qmd
+++ b/index.qmd
@@ -34,7 +34,7 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 10      | Friday, 3/28 | [Factors](weeks/week-10-factors.qmd)                              | [Pair Activity 7: COVID-19 Comparisons](group-activities/week-10/pa-7-covid.qmd)                                                  |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 11      | Friday, 4/10 | [Strings, Dates, and Times](weeks/week-11-strings-dates.qmd)      |                                                                                                                                   |
+| 11      | Friday, 4/10 | [Strings, Dates, and Times](weeks/week-11-strings-dates.qmd)      | [Pair Activity 8: COVID-19 in California](group-activities/week-11/pa-8-covid.qmd)                                                |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 12      | Friday 4/17  |                                                                   |                                                                                                                                   |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
