--- a/index.qmd
+++ b/index.qmd
@@ -36,5 +36,13 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 11      | Friday, 4/10 | [Strings, Dates, and Times](weeks/week-11-strings-dates.qmd)      | [Pair Activity 8: COVID-19 in California](group-activities/week-11/pa-8-covid.qmd)                                                |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 12      | Friday 4/17  |                                                                   | [Pair Activity 9: Writing Functions](group-activities/week-12/pa-9-functions.qmd)                                                 |
+| 12      | Friday, 4/17 | [Functions](weeks/week-12-functions.qmd)                          | [Pair Activity 9: Writing Functions](group-activities/week-12/pa-9-functions.qmd)                                                 |
++---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 13      | Friday, 4/25 | [Iteration](weeks/week-13-iteration.qmd)                          | Pair Activity 10:                                                                                                                 |
++---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 14      | Friday, 5/2  | Portfolio                                                         | Portfolio Work Day/Focus Groups                                                                                                   |
++---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| 15      | Friday, 5/9  | Special Topics                                                    | TBD                                                                                                                               |
++---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
+| Finals  |              |                                                                   | Portfolio Due 5/15                                                                                                                |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
