--- a/index.qmd
+++ b/index.qmd
@@ -38,7 +38,7 @@ This page contains an outline of the topics, content, and assignments for the qu
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 12      | Friday, 4/17 | [Functions](weeks/week-12-functions.qmd)                          | [Pair Activity 9: Writing Functions](group-activities/week-12/pa-9-functions.qmd)                                                 |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
-| 13      | Friday, 4/25 | [Iteration](weeks/week-13-iteration.qmd)                          | Pair Activity 10:                                                                                                                 |
+| 13      | Friday, 4/25 | [Iteration](weeks/week-13-iteration.qmd)                          | [Pair Activity 10: Exploring the Star Wars Universe](group-activities/week-13/pa-10-star-wars.qmd)                                |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
 | 14      | Friday, 5/2  | Portfolio                                                         | Portfolio Work Day/Focus Groups                                                                                                   |
 +---------+--------------+-------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+
