--- a/group-activities/week-13/pa-10-star-wars.qmd
+++ b/group-activities/week-13/pa-10-star-wars.qmd
@@ -310,7 +310,7 @@ sw_peeps2 %>%
 
 #### Canvas Quiz Question 3
 
-Write some code to identify who is is the heaviest (look at the graph to help guide this) Star Wars characer (excluding Jabba Desilijic Tiure).
+Write some code to identify who is is the heaviest (look at the graph to help guide this) Star Wars character (excluding Jabba Desilijic Tiure).
 
 ```{r}
 
