--- a/group-activities/week-13/pa-10-star-wars.qmd
+++ b/group-activities/week-13/pa-10-star-wars.qmd
@@ -24,6 +24,8 @@ library(magrittr)
 
 ```{r}
 #| label: data-prep
+#| include: false
+
 #using this later to add a variable to our data
 trilogies <- factor(
   c("Prequels: Episode I-III", 
